# EfficientLinearList

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  main.py  plot_ell_vs_vec.py  plot_memory_ell_vs_vec.py  plot_time_ell_vs_vec.py  plot_time_ell_vs_vec_linear.py
C++/: .gitignore  plot_memory_ell_vs_vec.py  plot_time_ell_vs_vec.py  plot_time_ell_vs_vec_linear.py
C++/src/: EfficientLinearList.h  EfficientList.h  IndexedPPS23RedBlackBinaryTree.h
C++/src.generate.drawings/: EfficientLinearList.h  EfficientList.h  IndexedPPS23RBBinaryTreeNode.h  IndexedPPS23RedBlackBinaryTree.h
C++/test/: CMakeLists.txt  testEfficientList.cpp
C++/test.paper/: CMakeLists.txt  drawTree.cpp  efficientList_vs_vector_half_remove.cpp  efficientList_vs_vector_remove_all.cpp  testAmountOfBlackNode.cpp  testTemplate.cpp
Java/: .gitignore  README.md  plot_memory_ell_vs_vec.py  plot_time_ell_vs_vec.py  plot_time_ell_vs_vec_linear.py
Java/src/: BinaryTreeBackwardInOrderIterator.java  BinaryTreeForwardInOrderIterator.java  EfficientLinearList.java  EfficientList.java  IndexedPPS23RBBinaryTreeNode.java  IndexedPPS23RedBlackBinaryTree.java
Java/test/: EfficientLinearList_vs_vector_half_remove.java  EfficientList_vs_vector_half_remove.java
Java/timeTakenResults/: get_after_insertRandomIndices_ell_results.csv  get_after_insertRandomIndices_vec_results.csv  get_after_popBackAfterPushBack_ell_results.csv  get_after_popBackAfterPushBack_vec_results.csv  get_after_popBackAfterPushFront_ell_results.csv  get_after_popBackAfterPushFront_vec_results.csv  get_after_popBack_popFront_ell_results.csv  get_after_popBack_popFront_vec_results.csv  get_after_popFrontAfterPushBack_ell_results.csv  get_after_pushBack_ell_results.csv  (+42 more)
Python/: .gitignore  README.md  blist_vs_efficient_list.py  efficient_list.c  efficient_list.h  efficient_list_module.c  indexed_PPS23RB_binaryTree.c  indexed_PPS23RB_binaryTree.h  indexed_PPS23RB_binaryTree_node.c  indexed_PPS23RB_binaryTree_node.h  plot_ell_vs_list.py  plot_time_ell_vs_vec_linear.py  setup.py  test_list.py
src/: BinaryTree.h  BinaryTreeNode.h  EfficientLinearList.h  InOrderPreservingBinaryTree.h  IndexedBinaryTree.h  IndexedPPS23RBBinaryTreeNode.h  IndexedPPS23RedBlackBinaryTree.h  InternalBinaryTreeNode.h  InternalInOrderPreservingBinaryTreeNode.h  InternalIndexedBinaryTreeNode.h  InternalIndexedPPS23RedBlackBinaryTreeNode.h  InternalPureParitySeeking-23RedBlackBinaryTreeNode.h  PureParitySeeking-23RedBlackBinaryTree.h
test/: CMakeLists.txt  testEfficientLinearList.cpp  testIndexedPPS23RBBinaryTree.cpp  testPureParitySeeking-23RedBlackBinaryTree.cpp
test.paper/: CMakeLists.txt  EfficientLinearList_vs_vector.cpp  drawTree.cpp  efficientLinearList_vs_vector.cpp  efficientLinearList_vs_vector_half_remove.cpp  efficientLinearList_vs_vector_remove_all.cpp  efficientLinearList_vs_vector_whole_remove.cpp  pureParitySeeking-23RedBlackBinaryTree.cpp
(+203 files in other folders)
