# add_executable(pureParitySeeking-23RedBlackBinaryTree pureParitySeeking-23RedBlackBinaryTree.cpp)
# target_link_libraries(pureParitySeeking-23RedBlackBinaryTree)

# add_executable(testAmountOfBlackNode testAmountOfBlackNode.cpp)
# target_link_libraries(testAmountOfBlackNode)

# add_executable(testTemplate testTemplate.cpp)
# target_link_libraries(testTemplate)

add_executable(efficientLinearList_vs_vector efficientLinearList_vs_vector.cpp)
target_link_libraries(efficientLinearList_vs_vector)

# add_executable(drawTree drawTree.cpp)
# target_link_libraries(drawTree)